src/objects/Committee_Member__c.object
<CustomObject>
    <fields>
        <fullName>Committee_Member__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Committee Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Committees</relationshipLabel>
        <relationshipName>Committee_Members</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committee_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Committee Name</label>
        <referenceTo>Committee__c</referenceTo>
        <relationshipLabel>Committee Members</relationshipLabel>
        <relationshipName>Committee_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Committee_Type__c</fullName>
        <label>Committee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Meeting</fullName>
                </value>
                <value>
                    <fullName>Constituency Group</fullName>
                </value>
                <value>
                    <fullName>Journal Editorial Board</fullName>
                </value>
                <value>
                    <fullName>Scientific Achievement Award</fullName>
                </value>
                <value>
                    <fullName>Scientific Grant Review</fullName>
                </value>
                <value>
                    <fullName>Scientific Task Force</fullName>
                </value>
                <value>
                    <fullName>Scientific Working Group</fullName>
                </value>
                <value>
                    <fullName>Specialty Group</fullName>
                </value>
                <value>
                    <fullName>Standing</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <label>Member Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advisory Editors</fullName>
                </value>
                <value>
                    <fullName>Advocate</fullName>
                </value>
                <value>
                    <fullName>Associate Editor</fullName>
                </value>
                <value>
                    <fullName>Biostatistical Editor</fullName>
                </value>
                <value>
                    <fullName>Breaking Insights Editor</fullName>
                </value>
                <value>
                    <fullName>Cancer Survivor</fullName>
                </value>
                <value>
                    <fullName>Chair</fullName>
                </value>
                <value>
                    <fullName>Chair-Elect</fullName>
                </value>
                <value>
                    <fullName>Chief Executive Officer</fullName>
                </value>
                <value>
                    <fullName>Co-Chair</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor for Breaking Insights</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor for Controversy and Consensus</fullName>
                </value>
                <value>
                    <fullName>Deputy Editor for Reviews</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Editor for Controvery and Consensus</fullName>
                </value>
                <value>
                    <fullName>Editorial Board Member</fullName>
                </value>
                <value>
                    <fullName>Editor-in-Chief</fullName>
                </value>
                <value>
                    <fullName>Executive Editor</fullName>
                </value>
                <value>
                    <fullName>Ex-Officio</fullName>
                </value>
                <value>
                    <fullName>Fellow</fullName>
                </value>
                <value>
                    <fullName>Founding Chairman of the Board</fullName>
                </value>
                <value>
                    <fullName>Founding Chairman of the Board and President Emeritus</fullName>
                </value>
                <value>
                    <fullName>Immediate Past President</fullName>
                </value>
                <value>
                    <fullName>Journal Board Member</fullName>
                </value>
                <value>
                    <fullName>Liaison</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Member at Large</fullName>
                </value>
                <value>
                    <fullName>Past Chair</fullName>
                </value>
                <value>
                    <fullName>Past President</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Committee Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Committee Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>